SONARIAC-1631 Resolve comments